# TuxedoVPN

./: .gitignore  LICENSE  README.md  Vagrantfile  ansible.cfg  init_deploy.yaml  remove-NAT-Vagrant.yml  site.yml  upgrade.yml
.github/workflows/: gitleaks.yml
docs/: README.md  architecture.md  certificates.md  getting-started.md  logging.md  metrics.md  operations.md  role-map.md  security-hardening.md  tuxedo.md  wireguard-mgmt.md
grafana_dashboards/: DPI-1768689575808.json  DPI-1770505480138.json  DPI-1771022727341.json  FreeRadius Accounting-1768689290983.json  FreeRadius Accounting-1770505491708.json  FreeRadius Accounting-1771022795916.json  OCServ-1768689481353.json  OCServ-1770505501192.json  OCServ-1771022820880.json  RADIUS → Pi-hole sync-1768689594018.json  RADIUS → Pi-hole sync-1770505592369.json  RADIUS → Pi-hole sync-1771022829828.json  VPN Clients-1771022917399.json
group_vars/: haproxy.yml  vpn.yml
group_vars/all/: __vault_template.yml  vars.yml
group_vars/mgmt/: __vault_template.yml  vars.yml
host_vars/: mgmt-srv-01.yml  vpn-srv-01.yml  vpn-srv-02.yml
inventory/: hosts.ini.example
roles/balancer/defaults/: main.yml
roles/balancer/tasks/: main.yml
roles/balancer/templates/: haproxy.cfg.j2
roles/certbot/defaults/: main.yml
roles/certbot/tasks/: autoconfig.yml  hook.yml  install.yml  issue.yml  main.yml  renew.yml
roles/mgmt-reverse-proxy/: README.md
roles/tuxedo-cli/: README.md
tuxedo/: README.md  pyproject.toml
tuxedo/src/tuxedo/: cli.py  config.py  db.py  sql.py
tuxedo/src/tuxedo/backends/: __init__.py  freeradius.py
(+139 files in other folders)
